@@ -65,7 +65,7 @@ confidence=
 # W0511 - ignore fixme/todo for report
 # I0011 - locally-disabled pylint options
 # C0111 - missing-docstring
-disable=R0903,W0511,I0011,C0111
+disable=R0903,W0511,I0011,C0111,no-else-return
 
 [REPORTS]
 
@@ -321,7 +321,7 @@ max-locals=15
 max-returns=6
 
 # Maximum number of branch for function / method body
-max-branches=12
+max-branches=13
 
 # Maximum number of statements in function / method body
 max-statements=50
