@@ -1,5 +1,7 @@
 UNRELEASED
 - Support No-Op type (decoder only)
+- Allow for object keys to be interned, saving memory if repeated (PY3 only)
+- Use PyUnicode_FromStringAndSize instead of PyUnicode_DecodeUTF8 (decoder)
 - Open file for writing, not appending (to/from json utility)
 - Used more compact json encoding (to/from json utility)
 
